# isBipartite

./: CMakeLists.txt  Doxyfile  LICENSE  README.md
TestData/: bp_test_0.txt  bp_test_3.txt  bp_test_4.txt  bp_test_5.txt  bp_test_6.txt  results.txt
include/: Graph.hpp  Node.hpp  Vertex.hpp
src/: Graph.cpp  Node.cpp  Vertex.cpp  main.cpp
test/: BipartiteGraph3.txt  BipartiteGraph4.txt
